# VGG-for-CIFAR-10

./: .gitignore  NIN.ipynb  NIN.py  README.md  VGG.ipynb  VGG.py  frame_special.py  google_net.ipynb  googlenet.py  main.ipynb  main_neat.ipynb  model_visual.txt  mul_gpu.py  net_frame.py  object_map.txt  pyproject.toml  resnet.ipynb  resnet.py  show_model.py  tqdm_reference.py  train.py
